Added threeclickscience experiment type
